--- a/src/main/webapp/app/entities/factcheck/claim/new-claim-popup.component.html
+++ b/src/main/webapp/app/entities/factcheck/claim/new-claim-popup.component.html
@@ -1,142 +1,144 @@
 <div class="header-dialogue">
-    <div>
-        <div>
-            <h2 id="jhi-claim-heading" jhiTranslate="gatewayApp.factcheckClaim.home.createOrEditLabel">
-                Create or edit a Claim
-            </h2>
-        </div>
+    <div class="dialogue-header shadow-sm">
+        <h2 id="jhi-claim-heading" jhiTranslate="gatewayApp.factcheckClaim.home.createOrEditLabel">
+            Create or edit a Claim
+        </h2>
     </div>
-    <form [formGroup]="claimFormGroup">
-        <div class="row justify-content-center">
-            <div class="col-12">
-                <div class="mt-5">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <mat-form-field class="full-width">
+    <div class="dialogue-body p-4">
+        <form [formGroup]="claimFormGroup">
+            <div class="row justify-content-center">
+                <div class="col-12">
+                    <div class="mt-2">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <mat-form-field class="full-width">
                                 <textarea class="title-input"
-                                       matInput
-                                       formControlName="claim"
-                                       placeholder="Claim Name">
+                                          matInput
+                                          formControlName="claim"
+                                          placeholder="Claim Name">
                                 </textarea>
-                                <mat-error>
-                                    Claim is <strong>required</strong>
-                                </mat-error>
-                            </mat-form-field>
-                        </div>
-                    </div>
-
-                    <div class="row mt-4">
-                        <div class="col-md-12">
-                            <div class="quill-editor-wrapper">
-                                <label> Claim Description</label>
-                                <jhi-quill-editor [original_content]="claim.description"
-                                                  (updated_content)="updateIntroductionFormData($event)">
-                                </jhi-quill-editor>
+                                    <mat-error>
+                                        Claim is <strong>required</strong>
+                                    </mat-error>
+                                </mat-form-field>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="row mt-5">
-                        <div class="col-md-6">
-                            <mat-form-field class="w-100">
-                                <input matInput [matDatepicker]="picker_1" formControlName="claimDate"
-                                       placeholder="Choose Claim Date">
-                                <mat-datepicker-toggle matSuffix [for]="picker_1"></mat-datepicker-toggle>
-                                <mat-datepicker #picker_1 startView="year"></mat-datepicker>
-                            </mat-form-field>
+                        <div class="row mt-4">
+                            <div class="col-md-12">
+                                <div class="quill-editor-wrapper">
+                                    <label> Claim Description</label>
+                                    <jhi-quill-editor [original_content]="claim.description"
+                                                      (updated_content)="updateIntroductionFormData($event)">
+                                    </jhi-quill-editor>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-md-6">
-                            <mat-form-field class="w-100">
-                                <input matInput [matDatepicker]="picker_2" formControlName="checkedDate"
-                                       placeholder="Choose Checked Date">
-                                <mat-datepicker-toggle matSuffix [for]="picker_2"></mat-datepicker-toggle>
-                                <mat-datepicker #picker_2 startView="year"></mat-datepicker>
-                            </mat-form-field>
-                        </div>
-                    </div>
 
-                    <div class="row">
-                        <div class="col-md-12">
-                            <mat-form-field class="full-width">
+                        <div class="row mt-5">
+                            <div class="col-md-6">
+                                <mat-form-field class="w-100">
+                                    <input matInput [matDatepicker]="picker_1" formControlName="claimDate"
+                                           placeholder="Choose Claim Date">
+                                    <mat-datepicker-toggle matSuffix [for]="picker_1"></mat-datepicker-toggle>
+                                    <mat-datepicker #picker_1 startView="year"></mat-datepicker>
+                                </mat-form-field>
+                            </div>
+                            <div class="col-md-6">
+                                <mat-form-field class="w-100">
+                                    <input matInput [matDatepicker]="picker_2" formControlName="checkedDate"
+                                           placeholder="Choose Checked Date">
+                                    <mat-datepicker-toggle matSuffix [for]="picker_2"></mat-datepicker-toggle>
+                                    <mat-datepicker #picker_2 startView="year"></mat-datepicker>
+                                </mat-form-field>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-12">
+                                <mat-form-field class="full-width">
                                 <textarea matInput
                                           formControlName="claimSource"
                                           [cdkTextareaAutosize]="true"
                                           placeholder="Claim Source">
                                 </textarea>
-                            </mat-form-field>
+                                </mat-form-field>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="row mb-4">
-                        <div class="col-md-12">
-                            <mat-form-field class="full-width">
+                        <div class="row mb-4">
+                            <div class="col-md-12">
+                                <mat-form-field class="full-width">
                                 <textarea matInput
                                           formControlName="reviewSources"
                                           [cdkTextareaAutosize]="true"
                                           placeholder="Review Sources">
                                 </textarea>
-                            </mat-form-field>
-                        </div>
-                    </div>
-
-                    <div class="row mb-4">
-                        <div class="col-md-12">
-                            <div class="quill-editor-wrapper">
-                                <label>Claim Review</label>
-                                <jhi-quill-editor [original_content]="claim.review"
-                                                  (updated_content)="updateReviewFormData($event)">
-                                </jhi-quill-editor>
+                                </mat-form-field>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="row">
-                        <div class="col-md-12">
-                            <mat-form-field class="full-width">
-                                <input matInput
-                                       formControlName="eviewTagLine"
-                                       placeholder="Review Tag Line">
-                                <mat-error>
-                                    reviewTagLine is <strong>required</strong>
-                                </mat-error>
-                            </mat-form-field>
+                        <div class="row mb-4">
+                            <div class="col-md-12">
+                                <div class="quill-editor-wrapper">
+                                    <label>Claim Review</label>
+                                    <jhi-quill-editor [original_content]="claim.review"
+                                                      (updated_content)="updateReviewFormData($event)">
+                                    </jhi-quill-editor>
+                                </div>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="row">
-                        <div class="col-md-6">
-                            <mat-form-field class="full-width">
-                                <mat-select placeholder="Rating" formControlName="ratingId">
-                                    <mat-option [value]="ratingOption.id"
-                                                *ngFor="let ratingOption of ratings | orderBy:'name';">
-                                        {{ratingOption.name}}
-                                    </mat-option>
-                                </mat-select>
-                            </mat-form-field>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <mat-form-field class="full-width">
+                                    <input matInput
+                                           formControlName="eviewTagLine"
+                                           placeholder="Review Tag Line">
+                                    <mat-error>
+                                        reviewTagLine is <strong>required</strong>
+                                    </mat-error>
+                                </mat-form-field>
+                            </div>
                         </div>
-                        <div class="col-md-6">
-                            <mat-form-field class="full-width">
-                                <mat-select placeholder="Claimants" formControlName="claimantId">
-                                    <mat-option [value]="claimantOption.id"
-                                                *ngFor="let claimantOption of claimants | orderBy:'name';">
-                                        {{claimantOption.name}}
-                                    </mat-option>
-                                </mat-select>
-                            </mat-form-field>
-                        </div>
-                    </div>
 
-                </div>
-                <div class="justify-content-end d-flex">
-                    <button type="button" id="cancel-save" class="btn btn-secondary" (click)="previousState(null)">
-                        <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
-                    </button>
-                    <button type="button" (click)="save()" id="save-entity" [disabled]="isSaving"
-                            class="btn btn-primary ml-3">
-                        <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
-                    </button>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <mat-form-field class="full-width">
+                                    <mat-select placeholder="Rating" formControlName="ratingId">
+                                        <mat-option [value]="ratingOption.id"
+                                                    *ngFor="let ratingOption of ratings | orderBy:'name';">
+                                            {{ratingOption.name}}
+                                        </mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                            </div>
+                            <div class="col-md-6">
+                                <mat-form-field class="full-width">
+                                    <mat-select placeholder="Claimants" formControlName="claimantId">
+                                        <mat-option [value]="claimantOption.id"
+                                                    *ngFor="let claimantOption of claimants | orderBy:'name';">
+                                            {{claimantOption.name}}
+                                        </mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="justify-content-end d-flex">
+                        <button mat-raised-button color="warn"
+                            type="button" id="cancel-save" (click)="previousState(null)">
+                            <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
+                        </button>
+                        <button mat-raised-button
+                            type="button" (click)="save()" id="save-entity" [disabled]="isSaving"
+                                class="btn btn-primary ml-3">
+                            <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
+                        </button>
+                    </div>
                 </div>
             </div>
-        </div>
-    </form>
+        </form>
+    </div>
 </div>
