--- a/src/main/webapp/app/shared/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/main/webapp/app/shared/confirmation-dialog/confirmation-dialog.component.html
@@ -1,4 +1,14 @@
-<div>{{data['message']}}</div>
-
-<button (click)="accept()">Yes</button>
-<button (click)="cancel()">No</button>
+<div class="header-dialogue">
+    <div class="dialogue-header shadow-sm">
+        <h2>Delete Confirmation</h2>
+    </div>
+    <div class="dialogue-body p-4">
+        <p>{{data['message']}}</p>
+        <div class="d-flex justify-content-end">
+            <button mat-raised-button class="mr-3"
+                    (click)="accept()">Yes</button>
+            <button mat-raised-button color="warn"
+                    (click)="cancel()">No</button>
+        </div>
+    </div>
+</div>
