--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -350,6 +350,15 @@ $theme: mat-light-theme($palette, $palette);
 }
 
 /* Quill Editor CSS ends */
+.quill-editor-table-action {
+    display: flex;
+    padding: 0 15px;
+    border: solid 1px #ccc;
+    border-width: 0 1px 1px 1px;
+    > div {
+        padding: 10px 12px;
+    }
+}
 
 /* Custom list view CSS */
 $card-height: 200px;
@@ -558,11 +567,7 @@ $xs-sm-font-size: 12px;
             margin-top: 20px;
             jhi-quill-editor {
                 quill-editor {
-                    .ql-toolbar {
-                        border: 0px;
-                    }
                     .ql-container {
-                        border: 0px;
                         padding: 10px;
                     }
                 }
@@ -614,11 +619,23 @@ $xs-sm-font-size: 12px;
     }
 }
 
-/* Header Dialogue*/
+/* Dialogue with header */
 .header-dialogue {
+    position: relative;
+    .mat-dialog-container {
+        padding: 0px;
+        .dialogue-header {
+            position: sticky;
+            top: 0px;
+            width: 100%;
+            height: 50px;
+            background-color: #3a4248;
+            color: white;
+            z-index: 1;
+            padding: 10px 20px;
+            h2 {
+                font-size: 20px;
+            }
+        }
+    }
 }
-
-//.mat-dialog-container{
-//    padding: 0px !important;
-//    width: 700px;
-//}
