--- a/src/main/webapp/app/entities/factcheck/claimant/claimant.component.html
+++ b/src/main/webapp/app/entities/factcheck/claimant/claimant.component.html
@@ -1,44 +1,110 @@
-<div>
-    <h2 id="page-heading">
-        <span jhiTranslate="gatewayApp.factcheckClaimant.home.title">Claimants</span>
-        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-claimant" [routerLink]="['/claimant/new']">
-            <fa-icon [icon]="'plus'"></fa-icon>
-            <span class="hidden-sm-down"  jhiTranslate="gatewayApp.factcheckClaimant.home.createLabel">
-            Create new Claimant
-            </span>
-        </button>
-    </h2>
-    <jhi-alert></jhi-alert>
-    <div class="row">
-        <div class="col-sm-12">
-            <form name="searchForm" class="form-inline">
-                <div class="input-group w-100 mt-3">
-                    <input type="text" class="form-control" [(ngModel)]="currentSearch" id="currentSearch" name="currentSearch" placeholder="{{ 'gatewayApp.factcheckClaimant.home.search' | translate }}">
-                    <button class="input-group-append btn btn-info" (click)="search(currentSearch)">
-                        <fa-icon [icon]="'search'"></fa-icon>
-                    </button>
-                    <button class="input-group-append btn btn-danger" (click)="clear()" *ngIf="currentSearch">
-                        <fa-icon [icon]="'trash-alt'"></fa-icon>
+<div class="p-2">
+    <div class="row mt-5">
+        <div class="col-md-5">
+            <h2 id="page-heading">
+                <span jhiTranslate="gatewayApp.factcheckClaimant.home.title">Claimants</span>
+            </h2>
+        </div>
+        <div class="col-md-7">
+            <form name="searchForm" class="d-flex align-content-center justify-content-end">
+                <mat-form-field>
+                    <input matInput type="text"
+                           [(ngModel)]="currentSearch" id="currentSearch" name="currentSearch"
+                           placeholder="{{ 'gatewayApp.factcheckClaimant.home.search' | translate }}">
+                </mat-form-field>
+                <button mat-icon-button mat-raised-button class="mr-2" (click)="search(currentSearch)">
+                    <mat-icon>search</mat-icon>
+                </button>
+                <button mat-icon-button mat-raised-button color="warn" class="mr-3" (click)="clear()"
+                        *ngIf="currentSearch">
+                    <mat-icon class="white">delete_outline</mat-icon>
+                </button>
+                <div>
+                    <button mat-button mat-raised-button color="primary"
+                            id="jh-create-entity" [routerLink]="['/claimant/new']">
+                        <fa-icon [icon]="'plus'"></fa-icon>
+                        <span class="hidden-sm-down" jhiTranslate="gatewayApp.factcheckClaimant.home.createLabel">Create new Claimant</span>
                     </button>
                 </div>
             </form>
         </div>
     </div>
-    <br/>
-    <div class="table-responsive" *ngIf="claimants">
+    <jhi-alert></jhi-alert>
+    <div class="row">
+        <div class="table-responsive col-md-12" *ngIf="claimants" jhiSort [(predicate)]="predicate" [(ascending)]="reverse"
+             [callback]="transition.bind(this)">
+            <table mat-table [dataSource]="claimants" class="mat-elevation-z8 shadow-table full-width alternate-color box-shadow-2">
+                <ng-container matColumnDef="imageURL">
+                    <th jhiSortBy="imageURL" mat-header-cell *matHeaderCellDef><span jhiTranslate="gatewayApp.factcheckClaimant.imageURL">Image URL</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <td mat-cell *matCellDef="let element"> <img src="{{element.imageURL}}"></td>
+                </ng-container>
+                <ng-container matColumnDef="name">
+                    <th jhiSortBy="name" mat-header-cell *matHeaderCellDef><span jhiTranslate="gatewayApp.factcheckClaimant.name">Name</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <td mat-cell *matCellDef="let element"> {{element.name}}</td>
+                </ng-container>
+                <ng-container matColumnDef="description">
+                    <th jhiSortBy="description" mat-header-cell *matHeaderCellDef><span jhiTranslate="gatewayApp.factcheckClaimant.description">Name</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <td mat-cell *matCellDef="let element"> {{element.description}}</td>
+                </ng-container>
+                <ng-container matColumnDef="createdDate">
+                    <th jhiSortBy="createdDate" mat-header-cell *matHeaderCellDef><span jhiTranslate="gatewayApp.factcheckClaimant.createdDate">Created Date</span>
+                        <fa-icon [icon]="'sort'"></fa-icon>
+                    </th>
+                    <td mat-cell *matCellDef="let element"> {{element.createdDate | date:'medium'}}</td>
+                </ng-container>
+                <ng-container matColumnDef="actions">
+                    <th mat-header-cell *matHeaderCellDef class="action-column"> Actions</th>
+                    <td mat-cell *matCellDef="let element">
+                        <div class="action-button-container">
+                            <div [routerLink]="['/claimant', element.id, 'view' ]">
+                                <fa-icon [icon]="'eye'"></fa-icon>
+                            </div>
+                            <div [routerLink]="['/claimant', element.id, 'edit']">
+                                <fa-icon [icon]="'pencil-alt'"></fa-icon>
+                            </div>
+                            <div [routerLink]="['/', { outlets: { popup: 'claim/'+ element.id + '/delete'} }]"
+                                 replaceUrl="true"
+                                 queryParamsHandling="merge">
+                                <fa-icon [icon]="'times'"></fa-icon>
+                            </div>
+                        </div>
+                    </td>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+        </div>
+    </div>
+    <div class="table-responsive" *ngIf="false">
         <table class="table table-striped">
             <thead>
             <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
-            <th jhiSortBy="imageURL"><span jhiTranslate="gatewayApp.factcheckClaimant.imageURL">Image URL</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <!--<th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
-            <th jhiSortBy="name"><span jhiTranslate="gatewayApp.factcheckClaimant.name">Name</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <!--<th jhiSortBy="tagLine"><span jhiTranslate="gatewayApp.factcheckClaimant.tagLine">Tag Line</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
-            <th jhiSortBy="description"><span jhiTranslate="gatewayApp.factcheckClaimant.description">Description</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <!--<th jhiSortBy="clientId"><span jhiTranslate="gatewayApp.factcheckClaimant.clientId">Client Id</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th jhiSortBy="slug"><span jhiTranslate="gatewayApp.factcheckClaimant.slug">Slug</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
-            <th jhiSortBy="createdDate"><span jhiTranslate="gatewayApp.factcheckClaimant.createdDate">Created Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <!--<th jhiSortBy="lastUpdatedDate"><span jhiTranslate="gatewayApp.factcheckClaimant.lastUpdatedDate">Last Updated Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
-            <th></th>
+                <th jhiSortBy="imageURL"><span jhiTranslate="gatewayApp.factcheckClaimant.imageURL">Image URL</span>
+                    <fa-icon [icon]="'sort'"></fa-icon>
+                </th>
+                <!--<th jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
+                <th jhiSortBy="name"><span jhiTranslate="gatewayApp.factcheckClaimant.name">Name</span>
+                    <fa-icon [icon]="'sort'"></fa-icon>
+                </th>
+                <!--<th jhiSortBy="tagLine"><span jhiTranslate="gatewayApp.factcheckClaimant.tagLine">Tag Line</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
+                <th jhiSortBy="description"><span
+                    jhiTranslate="gatewayApp.factcheckClaimant.description">Description</span>
+                    <fa-icon [icon]="'sort'"></fa-icon>
+                </th>
+                <!--<th jhiSortBy="clientId"><span jhiTranslate="gatewayApp.factcheckClaimant.clientId">Client Id</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+                <th jhiSortBy="slug"><span jhiTranslate="gatewayApp.factcheckClaimant.slug">Slug</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
+                <th jhiSortBy="createdDate"><span
+                    jhiTranslate="gatewayApp.factcheckClaimant.createdDate">Created Date</span>
+                    <fa-icon [icon]="'sort'"></fa-icon>
+                </th>
+                <!--<th jhiSortBy="lastUpdatedDate"><span jhiTranslate="gatewayApp.factcheckClaimant.lastUpdatedDate">Last Updated Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>-->
+                <th></th>
             </tr>
             </thead>
             <tbody>
@@ -82,10 +148,12 @@
     </div>
     <div *ngIf="claimants && claimants.length">
         <div class="row justify-content-center">
-            <jhi-item-count [page]="page" [total]="queryCount" [maxSize]="5" [itemsPerPage]="itemsPerPage"></jhi-item-count>
+            <jhi-item-count [page]="page" [total]="queryCount" [maxSize]="5"
+                            [itemsPerPage]="itemsPerPage"></jhi-item-count>
         </div>
         <div class="row justify-content-center">
-            <ngb-pagination [collectionSize]="totalItems" [(page)]="page" [pageSize]="itemsPerPage" [maxSize]="5" [rotate]="true" [boundaryLinks]="true" (pageChange)="loadPage(page)"></ngb-pagination>
+            <ngb-pagination [collectionSize]="totalItems" [(page)]="page" [pageSize]="itemsPerPage" [maxSize]="5"
+                            [rotate]="true" [boundaryLinks]="true" (pageChange)="loadPage(page)"></ngb-pagination>
         </div>
     </div>
 </div>
