--- a/src/main/webapp/app/entities/factcheck/claimant/claimant.component.html
+++ b/src/main/webapp/app/entities/factcheck/claimant/claimant.component.html
@@ -1,4 +1,4 @@
-<div class="p-2">
+<div class="table-view-page p-2">
     <div class="row mt-5">
         <div class="col-md-5">
             <h2 id="page-heading">
